src/objects/Apttus_QPConfig__ProposalIncentiveLimitData__c.object
<CustomObject>
    <description>Represents a single limit data row associated with the incentive limit for the quote/proposal</description>
    <fields>
        <fullName>Apttus_QPConfig__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Proposal Incentive Limit Data</relationshipLabel>
        <relationshipName>ProposalIncentiveLimitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LimitAppliesToValue__c</fullName>
        <description>Indicates the scope the limit should be applied to</description>
        <externalId>true</externalId>
        <inlineHelpText>Indicates the scope the limit should be applied to</inlineHelpText>
        <label>Limit Applies To Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LimitAppliesTo__c</fullName>
        <description>Indicates the scope the limit should be applied to</description>
        <inlineHelpText>Indicates the scope the limit should be applied to</inlineHelpText>
        <label>Limit Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LimitEndDate__c</fullName>
        <description>The end date of the limit period</description>
        <inlineHelpText>The end date of the limit period</inlineHelpText>
        <label>Limit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LimitId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive limit</description>
        <inlineHelpText>ID of the associated incentive limit</inlineHelpText>
        <label>Limit</label>
        <referenceTo>Apttus_Config2__IncentiveLimit__c</referenceTo>
        <relationshipLabel>Proposal Incentive Limit Data</relationshipLabel>
        <relationshipName>ProposalIncentiveLimitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LimitMetric__c</fullName>
        <description>The limit metric</description>
        <inlineHelpText>The limit metric</inlineHelpText>
        <label>Limit Metric</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number Of Times Used</fullName>
                    <default>true</default>
                    <label>Number Of Times Used</label>
                </value>
                <value>
                    <fullName>Benefit Quantity</fullName>
                </value>
                <value>
                    <fullName>Benefit Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LimitStartDate__c</fullName>
        <description>The start date of the limit period</description>
        <inlineHelpText>The start date of the limit period</inlineHelpText>
        <label>Limit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Proposal Incentive Limit Data</relationshipLabel>
        <relationshipName>ProposalIncentiveLimitData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__UsedValue__c</fullName>
        <description>The used value</description>
        <inlineHelpText>The used value</inlineHelpText>
        <label>Used Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Proposal Incentive Limit Data</label>
    <nameField>
        <displayFormat>PLD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Incentive Limit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>